Compiler/Frontend/grammar.txt
# Pre Define
<number> -> Numbers includes Integer and Decimal
<string> -> Text like: "content"
<char> -> Single character: 'char'
<field> -> Raw identifier.

# Define
Literal -> <number> | <string> | 'true' | 'false' | <char>
IndexOp -> '[' AddExpr ']'
CallingOp -> '(' WholeExpr (',' WholeExpr)* ')'
AtomIdentifierExpr -> (Identifier | '(' IdentifierExpr ')') (IndexOp|CallingOp)*
IdentifierExpr -> ('!' | ('++' | '--') | '*' | '&') AtomIdentifierExpr ('.' AtomIdentifierExpr) ('++' | '--')*
InnerCallableOpExpr -> ('typeof'|'sizeof') CallingOp
PrimExpr -> Literal | IdentifierExpr | InnerCallableOpExpr

MulExpr -> PrimExpr (('*'|'/') PrimExpr)*
AddExpr -> MulExpr (('+'|'-') MulExpr)*
LogicExpr -> AddExpr (('=='|'!='|'>'|'<'|'<='|'>=') AddExpr)*
BinaryExpr -> LogicExpr (('||'|'&&') LogicExpr)*
ArrayExpr -> '[' WholeExpr (',' WholeExpr)* ']'
AssignExpr -> IdentifierExpr '=' | '+=' | '-=' | '/=' | '*=' WholeExpr

WholeExpr -> AddExpr | BinaryExpr | ArrayExpr | AssignExpr

BasicTypeModifier -> 'i32'|'i64'|'ui32'|'ui64'|'f32'|'f64'|'bool'|'char'|'string'|'void'|<field>
ArrayTypeModifier ->  BasicTypeModifier ('[' <number> ']')*
TypeModifier -> (ArrayTypeModifier | BasicTypeModifier (('*')*|&)) '?'

DeclareStmt -> 'let' <field> (':' TypeModifier) '=' WholeExpr '；'
ExprStmt -> IdentifierExpr | AssignExpr ';'
BlockStmt -> '{' (Stmt)* '}'
IfStmt -> 'if' '(' BinaryExpr ')' Stmt | BlockStmt
ElseStmt -> 'else' Stmt | BlockStmt
WhileStmt -> 'while' '(' BinaryExpr ')' Stmt | BlockStmt
ForStmt -> 'for' '(' LetStmt BinaryExpr ';' WholeExpr ';' ')' Stmt | BlockStmt
RepeatStmt -> 'repeat' '(' WholeExpr ')' BlockStmt
MatchStmt -> 'match' '(' IdentifierExpr ')' '{' (WholeExpr '=>' BlockStmt)* 'default' '=>' BlockStmt '}'
FuncDefineStmt -> 'func' <field> '(' (<field> ':' TypeModifier) (',' <field> ':' TypeModifier) ')' '->' TypeModifier BlockStmt
ReturnStmt -> 'return' WholeExpr ';'
BreakStmt -> 'break' ';'
ContinueStmt -> 'continue' ';'
Stmt -> DeclareStmt | ExprStmt | BlockStmt |
        IfStmt | ElseStmt | WhileStmt |
        ForStmt | ReturnStmt | BreakStmt |
        ContinueStmt | MatchStmt | RepeatStmt
